--- a/gui/slick/css/style.css
+++ b/gui/slick/css/style.css
@@ -868,7 +868,17 @@ home_trendingShows.mako
 /* =======================================================================
 displayShow.mako
 ========================================================================== */
-
+#showPick {
+    display: inline-block;
+    max-width: calc(100% - 40px);
+    width: auto;
+}
+@media (max-width: 767px) {
+    .navShow:first-child::before {
+        content: '';   
+        display: block;
+    }
+}
 #posterCol {
     float: left;
     margin-right: 10px;
